# Base-Robot

./: README.md
base_description/meshes/: wheel.STL
base_description/urdf/: ir100.xacro
base_navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml
base_navigation/launch/: move_base.launch
base_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
third_party_sensors/sick_tim/launch/: sick_tim571_2050101.launch
third_party_sensors/third_party_sensors/: CHANGELOG.rst  package.xml
