<?xml version="1.0"?>
<package>
  <name>c100_robot</name>
  <version>0.1.0</version>
  <description>The c100_robot package</description>

  <author email="shansu@sensorobots.net">shansu</author>
  <maintainer email="shansu@sensorobots.net">shansu</maintainer>
  <url type="repository">https://github.com/ShanSuIntelligent</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ir100_driver</run_depend>
  <run_depend>ir100_description</run_depend>
  <run_depend>ir100_navigation</run_depend>
  <run_depend>third_party_sensors</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
