<?xml version="1.0"?>
<package>
  <name>third_party_sensors</name>
  <version>0.1.0</version>
  <description>The third_party_sensors package</description>

  <author email="shansu@sensorobots.net">shansu</author>
  <maintainer email="shansu@sensorobots.net">shansu</maintainer>
  <url type="repository">https://github.com/ShanSuIntelligent</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>sick_tim</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
